# RAG-app

./: .gitignore  README.md  pyproject.toml  rag.ipynb  rag.py  rag_app.py  rag_nb.ipynb
