[project]
name = "rag-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.12.1",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
    "tiktoken>=0.13.0",
]
